# mid-generation-prompt-switching

./: LICENSE  README.md  cli.py  launch_study.py  mini_study_results_20251007_151912.json  mini_study_results_20251007_174700.json  pyproject.toml  run_mini_study.py  run_parameter_study.py  run_scheduler_experiment.py  run_scheduler_experiment_with_metrics.py  visualize_parameter_study.py
analysis_151912/: analysis_report.md  processed_results.csv
analysis_20251007_151912/: analysis_report.md
analysis_20251007_174700/: analysis_report.md  processed_results.csv
configs/: example_config.yaml  example_test_config.yaml  prompt_experiments.yaml
data/experiments/: results_quick_viz_test_20251007_020542.json  results_single_test_20251007_020531.json  step_analysis_20251007_042041_results.json  step_analysis_20251007_043852_results.json  step_analysis_20251007_045926_results.json  step_analysis_20251007_050416_results.json
notebooks/: artifact_exploration.ipynb  scheduler_experiment.ipynb  spectral_analysis.ipynb
src/analysis/: artifact_detector.py  spectral_analyzer.py
src/experiments/: prompt_switch_experiments.py  prompt_switching_tester.py
src/modal/: experiment_schedulers.py  sd3_modal.py  sd3_simple.py  sd3_working.py
src/visualization/: __init__.py  prompt_switch_visualizer.py
